Fix z-index of NowPlaying, VolumeSlider hover

--- a/src/ui/App/AudioPlayer/AudioControls/VolumeSlider/VolumeSlider.module.scss
+++ b/src/ui/App/AudioPlayer/AudioControls/VolumeSlider/VolumeSlider.module.scss
@@ -24,8 +24,6 @@
 	background-color: $dark-gray-3;
 	appearance: none;
 	opacity: 1;
-	transition: 0.2s;
-	transition: opacity 0.2s;
 	border-radius: 13px;
 	-webkit-app-region: no-drag;
 
@@ -37,6 +35,7 @@
 		background-color: $light-gray-1;
 		opacity: 0.25;
 		border-radius: 13px 0 0 13px;
+		transition: opacity 0.2s;
 	}
 
 	&::-webkit-slider-thumb {
